Stubbed out request to save info

--- a/kuwork/index.html
+++ b/kuwork/index.html
@@ -279,8 +279,19 @@
                         if (!data) {
                             console.log('Cancelled')
                         } else {
-                            console.log(data); 
-                           //console.log('Username', data.username, 'Password', data.password)
+
+			// Simple GET request example:
+			$http({
+			  method: 'GET',
+			  url: '/someUrl'
+			}).then(function successCallback(response) {
+			    // this callback will be called asynchronously
+			    // when the response is available
+			  }, function errorCallback(response) {
+			    // called asynchronously if an error occurs
+			    // or server returns response with an error status.
+			  });
+
                         }
             	    }
                 });
