--- a/kuwork/index.html
+++ b/kuwork/index.html
@@ -282,8 +282,8 @@
 
 			// Simple GET request example:
 			$http({
-			  method: 'GET',
-			  url: '/someUrl'
+			  method: 'UPDATE',
+	  		  url: 'http://webtech.kettering.edu/~vecc0396/cs461/kuwork/'+selectedModel+'/'+mode+'.php'
 			}).then(function successCallback(response) {
 			    // this callback will be called asynchronously
 			    // when the response is available
