--- a/kuwork/index.html
+++ b/kuwork/index.html
@@ -282,7 +282,7 @@
 
 			// Simple GET request example:
 			$http({
-			  method: 'UPDATE',
+			  method: 'PUT',
 	  		  url: 'http://webtech.kettering.edu/~vecc0396/cs461/kuwork/'+selectedModel+'/'+mode+'.php'
 			}).then(function successCallback(response) {
 			    // this callback will be called asynchronously
